@@ -1,0 +1,10 @@
+﻿
+numbers = new int[3];
+numbers[0] = 1;
+numbers[1] = 2;
+numbers[2] = 3;
+
+foreach (number in numbers)
+	sum = sum + number;
+	
+
